--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Personal Portfolio">
-  <title>Your Name - Portfolio</title>
+  <title>Rashidov Davronbek- Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>Your Name</h1>
+      <h1>Rashidov Davronbek</h1>
       <p>Web Developer | Designer | Content Creator</p>
       <nav>
         <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about">Textile Engeener</a></li>
+          <li><a href="#projects">At the time Master degree</a></li>
+          <li><a href="#contact">rashidovdavronbek0820@gmail.com</a></li>
         </ul>
       </nav>
     </div>
@@ -24,8 +24,8 @@
 
   <section id="about">
     <div class="container">
-      <h2>About Me</h2>
-      <p>Hi, I'm [Your Name], a passionate developer and creative individual who enjoys building useful and visually appealing web experiences.</p>
+      <h2>@rashidow20 my insta</h2>
+      <p>Hi, I'm , a textile engeneer. My name is Rashidov Davronbek.</p>
     </div>
   </section>
 
@@ -34,7 +34,7 @@
       <h2>My Projects</h2>
       <div class="project">
         <h3>Project 1</h3>
-        <p>Description of your first project</p>
+        <p>first project is not here</p>
       </div>
       <div class="project">
         <h3>Project 2</h3>
