--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
       </div>
       <div class="project">
         <h3>Project 2</h3>
-        <p>Description of your second project</p>
+        <p>https://www.instagram.com/rashidow20</p>
       </div>
     </div>
   </section>
 
   <section id="contact">
     <div class="container">
-      <h2>Contact Me</h2>
-      <p>Email: your.email@example.com</p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">Your Profile</a></p>
+      <h2>Contact Me rashidovdavronbek0820@gmail.com</h2>
+      <p>Email: rashidovdavronbek0820@gmail.com</p>
+      <p>LinkedIn: <a href=https://www.linkedin.com/in/davron-rashidov-8076a3255?utm_source=share_via&utm_content=profile&utm_medium=member_android>"My Profile</a></p>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2025 Your Name. All rights reserved.</p>
+    <p>&copy; 2025 Davron Rashidov. All rights reserved.</p>
   </footer>
 </body>
 </html>
